[build-system]
requires = ["setuptools>=45", "setuptools_scm", "wheel"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pylero"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "ruff",
]
